examples/test/testpolicy7395.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7395
  namespace: namespace438
spec:
  podSelector:
    matchLabels:
      key49: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value18
          key20: value9
      podSelector:
        matchLabels:
          key49: value15
          key45: value33
